# aquarium-coral

./: CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: cmake.yml  coverage.yml  memcheck.yml
cmake/: FetchAquariumCMocka.cmake  FetchAquariumRock.cmake
doc/: ArrayList.md  Conventions.md  ForwardQueue.md  ForwardStack.md  LinkedList.md  LinkedRedBlackTreeContainer.md  RedBlackTreeContainer.md  RedBlackTreeMap.md  RedBlackTreeSet.md
include/: coral.h
include/coral/: array_list.h  error.h  forward_queue.h  forward_stack.h  linked_list.h  linked_queue.h  linked_red_black_tree_container.h  linked_red_black_tree_set.h  linked_stack.h  red_black_tree_container.h  red_black_tree_map.h  red_black_tree_set.h
src/: array_list.c  coral.c  error.c  forward_queue.c  forward_stack.c  linked_list.c  linked_queue.c  linked_red_black_tree_container.c  linked_red_black_tree_set.c  linked_stack.c  red_black_tree_container.c  red_black_tree_map.c  red_black_tree_set.c
src/private/: stack.c  stack.h
src/test/: cmocka.h
test/: test_array_list.c  test_coral.c  test_forward_queue.c  test_forward_stack.c  test_linked_list.c  test_linked_queue.c  test_linked_red_black_tree_container.c  test_linked_red_black_tree_set.c  test_linked_stack.c  test_red_black_tree_container.c  test_red_black_tree_map.c  test_red_black_tree_set.c  test_stack.c
